--- a/gui/parametersdialog.ui
+++ b/gui/parametersdialog.ui
@@ -105,6 +105,16 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
+      <widget class="QPushButton" name="resetButton">
+       <property name="text">
+        <string>Reset</string>
+       </property>
+       <property name="icon">
+        <iconset theme="document-revert"/>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -123,7 +133,9 @@
         <string>Undo</string>
        </property>
        <property name="icon">
-        <iconset theme="edit-undo"/>
+        <iconset theme="edit-undo">
+         <normaloff/>
+        </iconset>
        </property>
       </widget>
      </item>
@@ -133,7 +145,9 @@
         <string>Redo</string>
        </property>
        <property name="icon">
-        <iconset theme="edit-redo"/>
+        <iconset theme="edit-redo">
+         <normaloff/>
+        </iconset>
        </property>
       </widget>
      </item>
