finish tableView. and the class also works well.

--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -45,7 +45,7 @@
        <enum>QTabWidget::South</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="rawTab">
        <attribute name="title">
@@ -406,7 +406,29 @@
          <number>0</number>
         </property>
         <item row="1" column="1" alignment="Qt::AlignTop">
-         <widget class="QTableView" name="analysisTableView"/>
+         <widget class="QTableView" name="analysisTableView">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>10</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="editTriggers">
+           <set>QAbstractItemView::NoEditTriggers</set>
+          </property>
+          <property name="selectionBehavior">
+           <enum>QAbstractItemView::SelectRows</enum>
+          </property>
+          <property name="showGrid">
+           <bool>false</bool>
+          </property>
+          <property name="sortingEnabled">
+           <bool>true</bool>
+          </property>
+          <attribute name="verticalHeaderVisible">
+           <bool>false</bool>
+          </attribute>
+         </widget>
         </item>
         <item row="0" column="0" rowspan="3">
          <widget class="QImageInteractiveDrawer" name="analysisInteracter" native="true">
@@ -425,23 +447,17 @@
           </property>
           <layout class="QGridLayout" name="gridLayout_4">
            <item row="1" column="1">
-            <widget class="QToolButton" name="toolButton">
+            <widget class="QToolButton" name="classAddToolButton">
              <property name="text">
               <string>+</string>
              </property>
             </widget>
            </item>
            <item row="1" column="0">
-            <widget class="QComboBox" name="classComboBox">
-             <item>
-              <property name="text">
-               <string>Base Class</string>
-              </property>
-             </item>
-            </widget>
+            <widget class="QComboBox" name="classComboBox"/>
            </item>
            <item row="1" column="2">
-            <widget class="QToolButton" name="toolButton_2">
+            <widget class="QToolButton" name="classDelToolButton">
              <property name="text">
               <string>-</string>
              </property>
