--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -405,14 +405,58 @@
         <property name="bottomMargin">
          <number>0</number>
         </property>
-        <item row="1" column="1" alignment="Qt::AlignTop">
-         <widget class="QTableView" name="analysisTableView">
+        <item row="2" column="1" alignment="Qt::AlignTop">
+         <widget class="QLabel" name="analysisGeneralLabel">
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1" alignment="Qt::AlignTop">
+         <widget class="QGroupBox" name="analysisGroupBox">
+          <property name="title">
+           <string>Current Object Settings</string>
+          </property>
+          <layout class="QGridLayout" name="gridLayout_4">
+           <item row="0" column="2">
+            <widget class="QToolButton" name="classDelToolButton">
+             <property name="text">
+              <string>-</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0">
+            <widget class="QComboBox" name="classComboBox"/>
+           </item>
+           <item row="0" column="1">
+            <widget class="QToolButton" name="classAddToolButton">
+             <property name="text">
+              <string>+</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
+        <item row="0" column="0" rowspan="5">
+         <widget class="QImageInteractiveDrawer" name="analysisInteracter" native="true">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-            <horstretch>0</horstretch>
-            <verstretch>10</verstretch>
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <horstretch>10</horstretch>
+            <verstretch>0</verstretch>
            </sizepolicy>
           </property>
+         </widget>
+        </item>
+        <item row="4" column="1" alignment="Qt::AlignBottom">
+         <widget class="QDialogButtonBox" name="buttonBox">
+          <property name="standardButtons">
+           <set>QDialogButtonBox::Reset|QDialogButtonBox::Save</set>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1" alignment="Qt::AlignTop">
+         <widget class="QTableView" name="analysisTableView">
           <property name="editTriggers">
            <set>QAbstractItemView::NoEditTriggers</set>
           </property>
@@ -430,55 +474,18 @@
           </attribute>
          </widget>
         </item>
-        <item row="0" column="0" rowspan="3">
-         <widget class="QImageInteractiveDrawer" name="analysisInteracter" native="true">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-            <horstretch>10</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
+        <item row="3" column="1">
+         <spacer name="verticalSpacer_3">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
           </property>
-         </widget>
-        </item>
-        <item row="0" column="1" alignment="Qt::AlignTop">
-         <widget class="QGroupBox" name="analysisGroupBox">
-          <property name="title">
-           <string>Current Object</string>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
           </property>
-          <layout class="QGridLayout" name="gridLayout_4">
-           <item row="1" column="1">
-            <widget class="QToolButton" name="classAddToolButton">
-             <property name="text">
-              <string>+</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0">
-            <widget class="QComboBox" name="classComboBox"/>
-           </item>
-           <item row="1" column="2">
-            <widget class="QToolButton" name="classDelToolButton">
-             <property name="text">
-              <string>-</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="0" colspan="3">
-            <widget class="QLabel" name="currentObjLabel">
-             <property name="text">
-              <string/>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </widget>
-        </item>
-        <item row="2" column="1" alignment="Qt::AlignBottom">
-         <widget class="QDialogButtonBox" name="buttonBox">
-          <property name="standardButtons">
-           <set>QDialogButtonBox::Reset|QDialogButtonBox::Save</set>
-          </property>
-         </widget>
+         </spacer>
         </item>
        </layout>
       </widget>
