add some works. finish crop and calibre space. add markerMatrix for general contoursWork.

--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -45,7 +45,7 @@
        <enum>QTabWidget::South</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="rawTab">
        <attribute name="title">
@@ -312,6 +312,13 @@
             </widget>
            </item>
            <item>
+            <widget class="QPushButton" name="medianBlurButton">
+             <property name="text">
+              <string>Median Blur</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <widget class="QPushButton" name="histEqualiseButton">
              <property name="text">
               <string>Histogram Equalisation</string>
@@ -336,6 +343,13 @@
             <widget class="QPushButton" name="medianBinaryzationButton">
              <property name="text">
               <string>Median Binaryzation</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="scharrButton">
+             <property name="text">
+              <string>Scharr</string>
              </property>
             </widget>
            </item>
