--- a/gui/parametersdialog.ui
+++ b/gui/parametersdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>270</width>
-    <height>289</height>
+    <height>213</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -110,7 +110,9 @@
         <string>Reset</string>
        </property>
        <property name="icon">
-        <iconset theme="document-revert"/>
+        <iconset theme="document-revert">
+         <normaloff/>
+        </iconset>
        </property>
       </widget>
      </item>
