--- a/gui/icons.qrc
+++ b/gui/icons.qrc
@@ -18,7 +18,18 @@
         <file alias="48x48/document-revert.png">icons/Oxygen/48x48/document-revert.png</file>
         <file alias="22x22/document-revert.png">icons/Oxygen/22x22/document-revert.png</file>
         <file alias="32x32/document-revert.png">icons/Oxygen/32x32/document-revert.png</file>
-        <file alias="22x22/documentinfo.png">icons/Oxygen/22x22/documentinfo.png</file>
+        <file alias="22x22/document-preview.png">icons/Oxygen/22x22/document-preview.png</file>
+        <file alias="32x32/document-preview.png">icons/Oxygen/32x32/document-preview.png</file>
+        <file alias="48x48/document-preview.png">icons/Oxygen/48x48/document-preview.png</file>
+        <file alias="22x22/format-stroke-color.png">icons/Oxygen/22x22/format-stroke-color.png</file>
+        <file alias="32x32/format-stroke-color.png">icons/Oxygen/32x32/format-stroke-color.png</file>
+        <file alias="48x48/format-stroke-color.png">icons/Oxygen/48x48/format-stroke-color.png</file>
+        <file alias="22x22/roll.png">icons/Oxygen/22x22/roll.png</file>
+        <file alias="32x32/roll.png">icons/Oxygen/32x32/roll.png</file>
+        <file alias="48x48/roll.png">icons/Oxygen/48x48/roll.png</file>
+        <file alias="22x22/help-about.png">icons/Oxygen/22x22/help-about.png</file>
+        <file alias="32x32/help-about.png">icons/Oxygen/32x32/help-about.png</file>
+        <file alias="48x48/help-about.png">icons/Oxygen/48x48/help-about.png</file>
         <file alias="48x48/edit-undo.png">icons/Oxygen/48x48/edit-undo.png</file>
         <file alias="22x22/edit-undo.png">icons/Oxygen/22x22/edit-undo.png</file>
         <file alias="32x32/edit-undo.png">icons/Oxygen/32x32/edit-undo.png</file>
