--- a/gui/optionsdialog.ui
+++ b/gui/optionsdialog.ui
@@ -212,7 +212,9 @@
    <item row="3" column="2">
     <widget class="QToolButton" name="penColourToolButton">
      <property name="icon">
-      <iconset theme="applications-painting"/>
+      <iconset theme="format-stroke-color">
+       <normaloff/>
+      </iconset>
      </property>
      <property name="iconSize">
       <size>
