--- a/gui/watershedmarkerdialog.ui
+++ b/gui/watershedmarkerdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>387</width>
-    <height>205</height>
+    <width>446</width>
+    <height>201</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -32,7 +32,7 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="4" alignment="Qt::AlignBottom">
+   <item row="1" column="5" alignment="Qt::AlignBottom">
     <widget class="QPushButton" name="redoButton">
      <property name="enabled">
       <bool>false</bool>
@@ -47,7 +47,7 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="5">
+   <item row="1" column="6">
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -60,7 +60,35 @@
      </property>
     </spacer>
    </item>
-   <item row="2" column="0" colspan="7">
+   <item row="1" column="7">
+    <widget class="QPushButton" name="previewButton">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string>Preview</string>
+     </property>
+     <property name="icon">
+      <iconset theme="document-preview">
+       <normaloff/>
+      </iconset>
+     </property>
+     <property name="shortcut">
+      <string>Space</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0" colspan="8">
+    <widget class="QImageInteractiveDrawer" name="drawer" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0" colspan="8">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -70,7 +98,7 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1" colspan="3">
+   <item row="1" column="2" colspan="3">
     <widget class="QPushButton" name="undoButton">
      <property name="enabled">
       <bool>false</bool>
@@ -85,31 +113,13 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="6">
-    <widget class="QPushButton" name="previewButton">
-     <property name="enabled">
-      <bool>false</bool>
-     </property>
+   <item row="1" column="1">
+    <widget class="QPushButton" name="autoButton">
      <property name="text">
-      <string>Preview</string>
+      <string>Auto</string>
      </property>
      <property name="icon">
-      <iconset theme="document-export">
-       <normaloff/>
-      </iconset>
-     </property>
-     <property name="shortcut">
-      <string>Space</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0" colspan="7">
-    <widget class="QImageInteractiveDrawer" name="drawer" native="true">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
+      <iconset theme="roll"/>
      </property>
     </widget>
    </item>
