--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>698</width>
+    <width>696</width>
     <height>603</height>
    </rect>
   </property>
@@ -45,7 +45,7 @@
        <enum>QTabWidget::South</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="rawTab">
        <attribute name="title">
@@ -404,56 +404,6 @@
         <property name="margin">
          <number>0</number>
         </property>
-        <item row="2" column="1" alignment="Qt::AlignTop">
-         <widget class="QLabel" name="analysisGeneralLabel">
-          <property name="text">
-           <string/>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1" alignment="Qt::AlignTop">
-         <widget class="QGroupBox" name="analysisGroupBox">
-          <property name="title">
-           <string>Current Object Settings</string>
-          </property>
-          <layout class="QGridLayout" name="gridLayout_4">
-           <item row="0" column="2">
-            <widget class="QToolButton" name="classDelToolButton">
-             <property name="text">
-              <string>-</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="0">
-            <widget class="QComboBox" name="classComboBox"/>
-           </item>
-           <item row="0" column="1">
-            <widget class="QToolButton" name="classAddToolButton">
-             <property name="text">
-              <string>+</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </widget>
-        </item>
-        <item row="0" column="0" rowspan="5">
-         <widget class="QImageInteractiveDrawer" name="analysisInteracter" native="true">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-            <horstretch>10</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="1" alignment="Qt::AlignBottom">
-         <widget class="QDialogButtonBox" name="buttonBox">
-          <property name="standardButtons">
-           <set>QDialogButtonBox::Reset|QDialogButtonBox::Save</set>
-          </property>
-         </widget>
-        </item>
         <item row="1" column="1" alignment="Qt::AlignTop">
          <widget class="QTableView" name="analysisTableView">
           <property name="editTriggers">
@@ -486,6 +436,56 @@
           </property>
          </spacer>
         </item>
+        <item row="0" column="0" rowspan="5">
+         <widget class="QImageInteractiveDrawer" name="analysisInteracter" native="true">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <horstretch>10</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="1" alignment="Qt::AlignBottom">
+         <widget class="QDialogButtonBox" name="buttonBox">
+          <property name="standardButtons">
+           <set>QDialogButtonBox::Reset|QDialogButtonBox::Save</set>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1" alignment="Qt::AlignTop">
+         <widget class="QLabel" name="analysisCurrentClassLabel">
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1" alignment="Qt::AlignTop">
+         <widget class="QGroupBox" name="analysisGroupBox">
+          <property name="title">
+           <string>Current Object Settings</string>
+          </property>
+          <layout class="QGridLayout" name="gridLayout_4">
+           <item row="0" column="2">
+            <widget class="QToolButton" name="classDelToolButton">
+             <property name="text">
+              <string>-</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0">
+            <widget class="QComboBox" name="classComboBox"/>
+           </item>
+           <item row="0" column="1">
+            <widget class="QToolButton" name="classAddToolButton">
+             <property name="text">
+              <string>+</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
        </layout>
       </widget>
       <widget class="QWidget" name="infoTab">
@@ -514,7 +514,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>698</width>
+     <width>696</width>
      <height>22</height>
     </rect>
    </property>
