--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>696</width>
+    <width>690</width>
     <height>603</height>
    </rect>
   </property>
@@ -406,9 +406,6 @@
         </property>
         <item row="1" column="1" alignment="Qt::AlignTop">
          <widget class="QTableView" name="analysisTableView">
-          <property name="editTriggers">
-           <set>QAbstractItemView::NoEditTriggers</set>
-          </property>
           <property name="selectionBehavior">
            <enum>QAbstractItemView::SelectRows</enum>
           </property>
@@ -418,6 +415,9 @@
           <property name="sortingEnabled">
            <bool>true</bool>
           </property>
+          <attribute name="horizontalHeaderCascadingSectionResizes">
+           <bool>true</bool>
+          </attribute>
           <attribute name="verticalHeaderVisible">
            <bool>false</bool>
           </attribute>
@@ -460,32 +460,6 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="1" alignment="Qt::AlignTop">
-         <widget class="QGroupBox" name="analysisGroupBox">
-          <property name="title">
-           <string>Current Object Settings</string>
-          </property>
-          <layout class="QGridLayout" name="gridLayout_4">
-           <item row="0" column="2">
-            <widget class="QToolButton" name="classDelToolButton">
-             <property name="text">
-              <string>-</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="0">
-            <widget class="QComboBox" name="classComboBox"/>
-           </item>
-           <item row="0" column="1">
-            <widget class="QToolButton" name="classAddToolButton">
-             <property name="text">
-              <string>+</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </widget>
-        </item>
        </layout>
       </widget>
       <widget class="QWidget" name="infoTab">
@@ -514,7 +488,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>696</width>
+     <width>690</width>
      <height>22</height>
     </rect>
    </property>
